--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,10 @@
 
       <h1>HTML Form Debugger</h1>
       <p>
-        This web application displays all the parameters received via a form GET or POST request. Useful for debugging HTML forms.
+        Webapp that displays all the parameters received via a form GET or POST request. Useful for debugging HTML forms.
+      </p>
+      <p>
+        This app was developed to support the Web Programming Master Class at IPCA.
       </p>
 
       <h2>HTTP Request</h2>
